Revert "Restored resourses.html to original order"
This reverts commit 8b74da31aec7213b0daa6c9584bd7287e98815b0.

--- a/resources.html
+++ b/resources.html
@@ -96,6 +96,9 @@
               <ul>
                 <li>Comfortable hiking shoes</li>
                 <li>Hat</li>
+                <li>Sunglasses</li>
+                <li>Sunscreen</li>
+                <li>Insect repellent</li>
                 <li>Wet/dry bag to protect valuables</li>
                 <li>Sunglasses</li>
                 <li>Sunscreen</li>
