--- a/resources.html
+++ b/resources.html
@@ -95,16 +95,15 @@
             <li>Is your trip an outdoor adventure? If so we recommend the following:
               <ul>
                 <li>Comfortable hiking shoes</li>
-                <li>Sunglasses</li>
-                <li>Hat</li>
-                <li>Sunscreen</li>
                 <li>Wet/dry bag to protect valuables</li>
+                <li>Hat</li>
+                <li>Sunglasses</li>
+                <li>Sunscreen</li>
                 <li>Comfortable backpack</li>
                 <li>Stainless steel water bottle</li>
                 <li>Multi-purpose tool</li>
                 <li>Pack no more than one additional day of clothing</li>
                 <li>Insect repellent</li>
-                <li>Sunscreen</li>
               </ul>
             </li>
             <li>Bring comfortable shoes. (I know, we shouldn’t have to say that, but you’d be amazed)</li>
@@ -152,7 +151,7 @@
         </div>
         <div id="footerResources">
           <h1>Resources</h1>
-          <ul id="quickNav">
+          <ul class="quickNav">
             <li><a href="resources/faq.html" title="Our home page">FAQ</a></li>
             <li><a href="support.html" title="Need help?">Support</a></li>
             <li><a href="resources/legal.html" title="The fine print">Legal</a></li>
